syntax = "proto3";
package users;


service Users {
    rpc Create(User) returns (UserResponse) {}
    rpc Get(User) returns (UserResponse) {}
    rpc GetAll(Request) returns (UserResponse) {}
    rpc Auth(User) returns (Token) {}
    rpc ValidateToken(Token) returns (Token) {}

}

message User {
    // @inject_tag: bson:"_id"
    string id = 1;
    // @inject_tag: bson:"username"
    string username = 2;
    // @inject_tag: bson:"email"
    string email = 3;
    // @inject_tag: bson:"password"
    string password = 5;
    // @inject_tag: bson:"token"
    string token = 6;
}

// Empty Request
message Request{}

message UserResponse {
    User user = 1;
    repeated User users = 2;
    repeated Error errors = 3;
    Token token = 4;
}

message Token {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}

message Error {
    int32 code = 1;
    string description = 2;
}